# storage1024

./: .gitignore  app.js  bridge.py  client.py  docs.html  generate_session.py  index.html  main.py  manager.py  requirements.txt  s.bat  s1024.js  style.css
docs/: index.html  script.js  story.md  style.css
docs/langs/: bash.md  cpp.md  csharp.md  curl.md  go.md  java.md  js.md  kotlin.md  node.md  php.md  powershell.md  python.md  ruby.md  rust.md  ts.md
libraries/bash/: storage1024.sh
libraries/cpp/: storage1024.h
libraries/csharp/: Storage1024.cs
libraries/go/: storage1024.go
libraries/java/: Storage1024.java
libraries/kotlin/: Storage1024.kt
libraries/php/: Storage1024.php
libraries/powershell/: Storage1024.psm1
libraries/python/: README.md  pyproject.toml
libraries/python/storage1024/: __init__.py  client.py
libraries/python/storage1024.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
libraries/ruby/: storage1024.rb
libraries/rust/: Cargo.toml
libraries/rust/src/: lib.rs
libraries/s1024/: package.json  s1024.js
web/: app.js  cdn.js  index.html  s1024-client.js  style.css
