[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "storage1024"
version = "1.0.0"
authors = [
  { name="Seigh-sword", email="zack.yt.7085@gmail.com" },
]
description = "Premium High-performance object storage client library for Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
"Homepage" = "https://storage1024.onrender.com"
